--- a/test.html
+++ b/test.html
@@ -10,14 +10,10 @@
             let bmatrix = null;
             function createMatrix() {
                 $.getJSON("BitMatrixProps.json", (json) => {                    
-                    bmatrix = new BitMatrix('matrix_container', window.innerWidth-5, window.innerHeight-5, json);
+                    bmatrix = new BitMatrix('matrix_container', json);
                     bmatrix.start();
                 });
             }
-
-            window.addEventListener('resize', () => {
-                bmatrix.resizeCanvas(window.innerWidth, window.innerHeight);
-            });
         </script>
         <style> 
             html, body {
@@ -26,6 +22,11 @@
                 margin: 0px;
                 margin-top: 5px;
                 overflow: hidden;
+            }
+            
+            #matrix_container {
+                width: 100%;
+                height: 100%;
             }
         </style>
     </head>
